# ecryptfs-app

./: Makefile  Makefile.in  README.md  clean.sh  config.h  config.status  configure  configure.ac
autom4te.cache/: output.1  requests  traces.0  traces.1
data/: Makefile  Makefile.am  Makefile.in  ecryptfsservice.service.in  org.freedesktop.EcryptfsService.conf.in  org.freedesktop.EcryptfsService.service.in  org.freedesktop.EcryptfsService.xml
patch/: centos7_kernel_ecryptfs.patch
src/: Makefile  Makefile.am  Makefile.in  common.c  common.h  ecryptfsservice.c  ecryptfsservice.h  main.c  sqlite_helper.c  sqlite_helper.h
src/.deps/: common.Po  ecryptfsservice.Po  main.Po  sqlite_helper.Po
tools/: Makefile  Makefile.am  Makefile.in  closesbox.c  createsbox.c  deletesbox.c  helper.c  helper.h  opensbox.c
tools/.deps/: closesbox.Po  createsbox.Po  deletesbox.Po  helper.Po  opensbox.Po
